--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "generate-icons": "node scripts/generate-icons.js"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.1",
@@ -31,7 +32,9 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "canvas": "^3.1.0",
+    "sharp": "^0.34.1"
   },
   "private": true
 }
